phaseC/parser.output
Terminals unused in grammar

    DOUBLE
    UNDEFINED


State 100 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt_list stmt
    3          | ε

    4 stmt: expr SEMICOLON
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | Break
   10     | Continue
   11     | block
   12     | funcdef
   13     | SEMICOLON

   14 expr: assignexpr
   15     | expr PLUS expr
   16     | expr MINUS expr
   17     | expr MULT expr
   18     | expr DIV expr
   19     | expr MOD expr
   20     | expr GREATER expr
   21     | expr GREATER_EQUAL expr
   22     | expr LESS expr
   23     | expr LESS_EQUAL expr
   24     | expr EQUAL expr
   25     | expr NOT_EQUALS expr
   26     | expr AND M expr
   27     | expr OR M expr
   28     | term

   29 term: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
   30     | MINUS expr
   31     | NOT expr
   32     | PLUS_PLUS lvalue
   33     | lvalue PLUS_PLUS
   34     | MINUS_MINUS lvalue
   35     | lvalue MINUS_MINUS
   36     | primary

   37 assignexpr: lvalue ASSIGN expr

   38 primary: lvalue
   39        | call
   40        | objectdef
   41        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   42        | const

   43 lvalue: IDENT
   44       | LOCAL IDENT
   45       | NAMESPACE IDENT
   46       | member

   47 member: lvalue DOT IDENT
   48       | lvalue LEFT_BRACKET expr RIGHT_BRACKET
   49       | call DOT IDENT
   50       | call LEFT_BRACKET expr RIGHT_BRACKET

   51 call: lvalue callsuffix
   52     | call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   53     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   54 callsuffix: normcall
   55           | methodcall

   56 normcall: LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   57 methodcall: DOUBLE_DOT IDENT LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   58 elist: ε
   59      | expr elist_tail

   60 elist_tail: COMMA expr elist_tail
   61           | ε

   62 objectdef: LEFT_BRACKET elist RIGHT_BRACKET
   63          | LEFT_BRACKET indexed RIGHT_BRACKET

   64 indexed: indexedelem
   65        | indexed COMMA indexedelem

   66 indexedelem: LEFT_BRACE expr COLON expr RIGHT_BRACE

   67 $@1: ε

   68 block: LEFT_BRACE $@1 stmt_list RIGHT_BRACE

   69 $@2: ε

   70 $@3: ε

   71 funcdef: FUNCTION $@2 LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS $@3 block

   72 $@4: ε

   73 $@5: ε

   74 funcdef: FUNCTION IDENT $@4 LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS $@5 block

   75 const: INTEGER
   76      | REALCONST
   77      | STRING
   78      | NIL
   79      | TRUE
   80      | FALSE

   81 idlist: IDENT
   82       | idlist COMMA IDENT
   83       | ε

   84 ifprefix: IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

   85 elseprefix: ELSE

   86 ifstmt: ifprefix stmt
   87       | ifprefix stmt elseprefix stmt

   88 loopstart: ε

   89 loopend: ε

   90 loopstmt: loopstart stmt loopend

   91 whilestart: WHILE

   92 whilecond: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

   93 whilestmt: whilestart whilecond loopstmt

   94 N: ε

   95 M: ε

   96 forprefix: FOR LEFT_PARENTHESIS elist SEMICOLON M expr SEMICOLON

   97 forstmt: forprefix N elist RIGHT_PARENTHESIS N stmt N

   98 Break: BREAK SEMICOLON

   99 Continue: CONTINUE SEMICOLON

  100 returnstmt: RETURN SEMICOLON
  101           | RETURN expr SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER <intValue> (258) 75
    DOUBLE <doubleVal> (259)
    REALCONST <doubleVal> (260) 76
    IDENT <stringValue> (261) 43 44 45 47 49 57 74 81 82
    IF (262) 84
    ELSE (263) 85
    WHILE (264) 91
    FUNCTION (265) 71 74
    FOR (266) 96
    RETURN (267) 100 101
    BREAK (268) 98
    CONTINUE (269) 99
    AND (270) 26
    NOT (271) 31
    OR (272) 27
    NIL (273) 78
    TRUE (274) 79
    FALSE (275) 80
    LOCAL (276) 44
    ASSIGN (277) 37
    PLUS (278) 15
    MINUS (279) 16 30
    MULT (280) 17
    DIV (281) 18
    MOD (282) 19
    EQUAL (283) 24
    NOT_EQUALS (284) 25
    PLUS_PLUS (285) 32 33
    MINUS_MINUS (286) 34 35
    GREATER (287) 20
    LESS (288) 22
    GREATER_EQUAL (289) 21
    LESS_EQUAL (290) 23
    LEFT_BRACE (291) 66 68
    RIGHT_BRACE (292) 66 68
    LEFT_BRACKET (293) 48 50 62 63
    RIGHT_BRACKET (294) 48 50 62 63
    LEFT_PARENTHESIS (295) 29 41 52 53 56 57 71 74 84 92 96
    RIGHT_PARENTHESIS (296) 29 41 52 53 56 57 71 74 84 92 97
    SEMICOLON (297) 4 13 96 98 99 100 101
    COMMA (298) 60 65 82
    DOUBLE_DOT (299) 57
    DOT (300) 47 49
    NAMESPACE (301) 45
    COLON (302) 66
    STRING <stringValue> (303) 77
    UNDEFINED (304)
    UMINUS (305)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    program (52)
        on left: 1
        on right: 0
    stmt_list <s> (53)
        on left: 2 3
        on right: 1 2 68
    stmt <s> (54)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 86 87 90 97
    expr <exprVal> (55)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
        on right: 4 15 16 17 18 19 20 21 22 23 24 25 26 27 29 30 31 37 48 50 59 60 66 84 92 96 101
    term <exprVal> (56)
        on left: 29 30 31 32 33 34 35 36
        on right: 28
    assignexpr <exprVal> (57)
        on left: 37
        on right: 14
    primary <exprVal> (58)
        on left: 38 39 40 41 42
        on right: 36
    lvalue <exprVal> (59)
        on left: 43 44 45 46
        on right: 32 33 34 35 37 38 47 48 51
    member <exprVal> (60)
        on left: 47 48 49 50
        on right: 46
    call <exprVal> (61)
        on left: 51 52 53
        on right: 39 49 50 52
    callsuffix <callVal> (62)
        on left: 54 55
        on right: 51
    normcall <callVal> (63)
        on left: 56
        on right: 54
    methodcall <callVal> (64)
        on left: 57
        on right: 55
    elist <exprVal> (65)
        on left: 58 59
        on right: 52 53 56 57 62 96 97
    elist_tail <exprVal> (66)
        on left: 60 61
        on right: 59 60
    objectdef (67)
        on left: 62 63
        on right: 40
    indexed (68)
        on left: 64 65
        on right: 63 65
    indexedelem (69)
        on left: 66
        on right: 64 65
    block <s> (70)
        on left: 68
        on right: 11 71 74
    $@1 (71)
        on left: 67
        on right: 68
    funcdef <symEntry> (72)
        on left: 71 74
        on right: 12 41 53
    $@2 (73)
        on left: 69
        on right: 71
    $@3 (74)
        on left: 70
        on right: 71
    $@4 (75)
        on left: 72
        on right: 74
    $@5 (76)
        on left: 73
        on right: 74
    const <exprVal> (77)
        on left: 75 76 77 78 79 80
        on right: 42
    idlist <idList> (78)
        on left: 81 82 83
        on right: 71 74 82
    ifprefix <exprVal> (79)
        on left: 84
        on right: 86 87
    elseprefix <exprVal> (80)
        on left: 85
        on right: 87
    ifstmt <s> (81)
        on left: 86 87
        on right: 5
    loopstart (82)
        on left: 88
        on right: 90
    loopend (83)
        on left: 89
        on right: 90
    loopstmt <s> (84)
        on left: 90
        on right: 93
    whilestart <exprVal> (85)
        on left: 91
        on right: 93
    whilecond <exprVal> (86)
        on left: 92
        on right: 93
    whilestmt <s> (87)
        on left: 93
        on right: 6
    N <exprVal> (88)
        on left: 94
        on right: 97
    M <exprVal> (89)
        on left: 95
        on right: 26 27 96
    forprefix <loop_t> (90)
        on left: 96
        on right: 97
    forstmt <s> (91)
        on left: 97
        on right: 7
    Break <s> (92)
        on left: 98
        on right: 9
    Continue <s> (93)
        on left: 99
        on right: 10
    returnstmt <s> (94)
        on left: 100 101
        on right: 8


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (stmt_list)

    program    go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: stmt_list •
    2 stmt_list: stmt_list • stmt

    INTEGER           shift, and go to state 4
    REALCONST         shift, and go to state 5
    IDENT             shift, and go to state 6
    IF                shift, and go to state 7
    WHILE             shift, and go to state 8
    FUNCTION          shift, and go to state 9
    FOR               shift, and go to state 10
    RETURN            shift, and go to state 11
    BREAK             shift, and go to state 12
    CONTINUE          shift, and go to state 13
    NOT               shift, and go to state 14
    NIL               shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    LOCAL             shift, and go to state 18
    MINUS             shift, and go to state 19
    PLUS_PLUS         shift, and go to state 20
    MINUS_MINUS       shift, and go to state 21
    LEFT_BRACE        shift, and go to state 22
    LEFT_BRACKET      shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    SEMICOLON         shift, and go to state 25
    NAMESPACE         shift, and go to state 26
    STRING            shift, and go to state 27

    $default  reduce using rule 1 (program)

    stmt        go to state 28
    expr        go to state 29
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    block       go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstmt     go to state 45
    Break       go to state 46
    Continue    go to state 47
    returnstmt  go to state 48


State 3

    0 $accept: program $end •

    $default  accept


State 4

   75 const: INTEGER •

    $default  reduce using rule 75 (const)


State 5

   76 const: REALCONST •

    $default  reduce using rule 76 (const)


State 6

   43 lvalue: IDENT •

    $default  reduce using rule 43 (lvalue)


State 7

   84 ifprefix: IF • LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 49


State 8

   91 whilestart: WHILE •

    $default  reduce using rule 91 (whilestart)


State 9

   71 funcdef: FUNCTION • $@2 LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS $@3 block
   74        | FUNCTION • IDENT $@4 LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS $@5 block

    IDENT  shift, and go to state 50

    $default  reduce using rule 69 ($@2)

    $@2  go to state 51


State 10

   96 forprefix: FOR • LEFT_PARENTHESIS elist SEMICOLON M expr SEMICOLON

    LEFT_PARENTHESIS  shift, and go to state 52


State 11

  100 returnstmt: RETURN • SEMICOLON
  101           | RETURN • expr SEMICOLON

    INTEGER           shift, and go to state 4
    REALCONST         shift, and go to state 5
    IDENT             shift, and go to state 6
    NOT               shift, and go to state 14
    NIL               shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    LOCAL             shift, and go to state 18
    MINUS             shift, and go to state 19
    PLUS_PLUS         shift, and go to state 20
    MINUS_MINUS       shift, and go to state 21
    LEFT_BRACKET      shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    SEMICOLON         shift, and go to state 53
    NAMESPACE         shift, and go to state 26
    STRING            shift, and go to state 27

    expr        go to state 54
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 39


State 12

   98 Break: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 55


State 13

   99 Continue: CONTINUE • SEMICOLON

    SEMICOLON  shift, and go to state 56


State 14

   31 term: NOT • expr

    INTEGER           shift, and go to state 4
    REALCONST         shift, and go to state 5
    IDENT             shift, and go to state 6
    NOT               shift, and go to state 14
    NIL               shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    LOCAL             shift, and go to state 18
    MINUS             shift, and go to state 19
    PLUS_PLUS         shift, and go to state 20
    MINUS_MINUS       shift, and go to state 21
    LEFT_BRACKET      shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    NAMESPACE         shift, and go to state 26
    STRING            shift, and go to state 27

    expr        go to state 57
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 39


State 15

   78 const: NIL •

    $default  reduce using rule 78 (const)


State 16

   79 const: TRUE •

    $default  reduce using rule 79 (const)


State 17

   80 const: FALSE •

    $default  reduce using rule 80 (const)


State 18

   44 lvalue: LOCAL • IDENT

    IDENT  shift, and go to state 58


State 19

   30 term: MINUS • expr

    INTEGER           shift, and go to state 4
    REALCONST         shift, and go to state 5
    IDENT             shift, and go to state 6
    NOT               shift, and go to state 14
    NIL               shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    LOCAL             shift, and go to state 18
    MINUS             shift, and go to state 19
    PLUS_PLUS         shift, and go to state 20
    MINUS_MINUS       shift, and go to state 21
    LEFT_BRACKET      shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    NAMESPACE         shift, and go to state 26
    STRING            shift, and go to state 27

    expr        go to state 59
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 39


State 20

   32 term: PLUS_PLUS • lvalue

    IDENT             shift, and go to state 6
    LOCAL             shift, and go to state 18
    LEFT_PARENTHESIS  shift, and go to state 60
    NAMESPACE         shift, and go to state 26

    lvalue  go to state 61
    member  go to state 34
    call    go to state 62


State 21

   34 term: MINUS_MINUS • lvalue

    IDENT             shift, and go to state 6
    LOCAL             shift, and go to state 18
    LEFT_PARENTHESIS  shift, and go to state 60
    NAMESPACE         shift, and go to state 26

    lvalue  go to state 63
    member  go to state 34
    call    go to state 62


State 22

   68 block: LEFT_BRACE • $@1 stmt_list RIGHT_BRACE

    $default  reduce using rule 67 ($@1)

    $@1  go to state 64


State 23

   62 objectdef: LEFT_BRACKET • elist RIGHT_BRACKET
   63          | LEFT_BRACKET • indexed RIGHT_BRACKET

    INTEGER           shift, and go to state 4
    REALCONST         shift, and go to state 5
    IDENT             shift, and go to state 6
    NOT               shift, and go to state 14
    NIL               shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    LOCAL             shift, and go to state 18
    MINUS             shift, and go to state 19
    PLUS_PLUS         shift, and go to state 20
    MINUS_MINUS       shift, and go to state 21
    LEFT_BRACE        shift, and go to state 65
    LEFT_BRACKET      shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    NAMESPACE         shift, and go to state 26
    STRING            shift, and go to state 27

    $default  reduce using rule 58 (elist)

    expr         go to state 66
    term         go to state 30
    assignexpr   go to state 31
    primary      go to state 32
    lvalue       go to state 33
    member       go to state 34
    call         go to state 35
    elist        go to state 67
    objectdef    go to state 36
    indexed      go to state 68
    indexedelem  go to state 69
    const        go to state 39


State 24

   29 term: LEFT_PARENTHESIS • expr RIGHT_PARENTHESIS
   41 primary: LEFT_PARENTHESIS • funcdef RIGHT_PARENTHESIS
   53 call: LEFT_PARENTHESIS • funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    INTEGER           shift, and go to state 4
    REALCONST         shift, and go to state 5
    IDENT             shift, and go to state 6
    FUNCTION          shift, and go to state 9
    NOT               shift, and go to state 14
    NIL               shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    LOCAL             shift, and go to state 18
    MINUS             shift, and go to state 19
    PLUS_PLUS         shift, and go to state 20
    MINUS_MINUS       shift, and go to state 21
    LEFT_BRACKET      shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    NAMESPACE         shift, and go to state 26
    STRING            shift, and go to state 27

    expr        go to state 70
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    funcdef     go to state 71
    const       go to state 39


State 25

   13 stmt: SEMICOLON •

    $default  reduce using rule 13 (stmt)


State 26

   45 lvalue: NAMESPACE • IDENT

    IDENT  shift, and go to state 72


State 27

   77 const: STRING •

    $default  reduce using rule 77 (const)


State 28

    2 stmt_list: stmt_list stmt •

    $default  reduce using rule 2 (stmt_list)


State 29

    4 stmt: expr • SEMICOLON
   15 expr: expr • PLUS expr
   16     | expr • MINUS expr
   17     | expr • MULT expr
   18     | expr • DIV expr
   19     | expr • MOD expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUAL expr
   25     | expr • NOT_EQUALS expr
   26     | expr • AND M expr
   27     | expr • OR M expr

    AND            shift, and go to state 73
    OR             shift, and go to state 74
    PLUS           shift, and go to state 75
    MINUS          shift, and go to state 76
    MULT           shift, and go to state 77
    DIV            shift, and go to state 78
    MOD            shift, and go to state 79
    EQUAL          shift, and go to state 80
    NOT_EQUALS     shift, and go to state 81
    GREATER        shift, and go to state 82
    LESS           shift, and go to state 83
    GREATER_EQUAL  shift, and go to state 84
    LESS_EQUAL     shift, and go to state 85
    SEMICOLON      shift, and go to state 86


State 30

   28 expr: term •

    $default  reduce using rule 28 (expr)


State 31

   14 expr: assignexpr •

    $default  reduce using rule 14 (expr)


State 32

   36 term: primary •

    $default  reduce using rule 36 (term)


State 33

   33 term: lvalue • PLUS_PLUS
   35     | lvalue • MINUS_MINUS
   37 assignexpr: lvalue • ASSIGN expr
   38 primary: lvalue •
   47 member: lvalue • DOT IDENT
   48       | lvalue • LEFT_BRACKET expr RIGHT_BRACKET
   51 call: lvalue • callsuffix

    ASSIGN            shift, and go to state 87
    PLUS_PLUS         shift, and go to state 88
    MINUS_MINUS       shift, and go to state 89
    LEFT_BRACKET      shift, and go to state 90
    LEFT_PARENTHESIS  shift, and go to state 91
    DOUBLE_DOT        shift, and go to state 92
    DOT               shift, and go to state 93

    $default  reduce using rule 38 (primary)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 34

   46 lvalue: member •

    $default  reduce using rule 46 (lvalue)


State 35

   39 primary: call •
   49 member: call • DOT IDENT
   50       | call • LEFT_BRACKET expr RIGHT_BRACKET
   52 call: call • LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACKET      shift, and go to state 97
    LEFT_PARENTHESIS  shift, and go to state 98
    DOT               shift, and go to state 99

    $default  reduce using rule 39 (primary)


State 36

   40 primary: objectdef •

    $default  reduce using rule 40 (primary)


State 37

   11 stmt: block •

    $default  reduce using rule 11 (stmt)


State 38

   12 stmt: funcdef •

    $default  reduce using rule 12 (stmt)


State 39

   42 primary: const •

    $default  reduce using rule 42 (primary)


State 40

   86 ifstmt: ifprefix • stmt
   87       | ifprefix • stmt elseprefix stmt

    INTEGER           shift, and go to state 4
    REALCONST         shift, and go to state 5
    IDENT             shift, and go to state 6
    IF                shift, and go to state 7
    WHILE             shift, and go to state 8
    FUNCTION          shift, and go to state 9
    FOR               shift, and go to state 10
    RETURN            shift, and go to state 11
    BREAK             shift, and go to state 12
    CONTINUE          shift, and go to state 13
    NOT               shift, and go to state 14
    NIL               shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    LOCAL             shift, and go to state 18
    MINUS             shift, and go to state 19
    PLUS_PLUS         shift, and go to state 20
    MINUS_MINUS       shift, and go to state 21
    LEFT_BRACE        shift, and go to state 22
    LEFT_BRACKET      shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    SEMICOLON         shift, and go to state 25
    NAMESPACE         shift, and go to state 26
    STRING            shift, and go to state 27

    stmt        go to state 100
    expr        go to state 29
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    block       go to state 37
    funcdef     go to state 38
    const       go to state 39
    ifprefix    go to state 40
    ifstmt      go to state 41
    whilestart  go to state 42
    whilestmt   go to state 43
    forprefix   go to state 44
    forstmt     go to state 45
    Break       go to state 46
    Continue    go to state 47
    returnstmt  go to state 48


State 41

    5 stmt: ifstmt •

    $default  reduce using rule 5 (stmt)


State 42

   93 whilestmt: whilestart • whilecond loopstmt

    LEFT_PARENTHESIS  shift, and go to state 101

    whilecond  go to state 102


State 43

    6 stmt: whilestmt •

    $default  reduce using rule 6 (stmt)


State 44

   97 forstmt: forprefix • N elist RIGHT_PARENTHESIS N stmt N

    $default  reduce using rule 94 (N)

    N  go to state 103


State 45

    7 stmt: forstmt •

    $default  reduce using rule 7 (stmt)


State 46

    9 stmt: Break •

    $default  reduce using rule 9 (stmt)


State 47

   10 stmt: Continue •

    $default  reduce using rule 10 (stmt)


State 48

    8 stmt: returnstmt •

    $default  reduce using rule 8 (stmt)


State 49

   84 ifprefix: IF LEFT_PARENTHESIS • expr RIGHT_PARENTHESIS

    INTEGER           shift, and go to state 4
    REALCONST         shift, and go to state 5
    IDENT             shift, and go to state 6
    NOT               shift, and go to state 14
    NIL               shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    LOCAL             shift, and go to state 18
    MINUS             shift, and go to state 19
    PLUS_PLUS         shift, and go to state 20
    MINUS_MINUS       shift, and go to state 21
    LEFT_BRACKET      shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    NAMESPACE         shift, and go to state 26
    STRING            shift, and go to state 27

    expr        go to state 104
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 39


State 50

   74 funcdef: FUNCTION IDENT • $@4 LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS $@5 block

    $default  reduce using rule 72 ($@4)

    $@4  go to state 105


State 51

   71 funcdef: FUNCTION $@2 • LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS $@3 block

    LEFT_PARENTHESIS  shift, and go to state 106


State 52

   96 forprefix: FOR LEFT_PARENTHESIS • elist SEMICOLON M expr SEMICOLON

    INTEGER           shift, and go to state 4
    REALCONST         shift, and go to state 5
    IDENT             shift, and go to state 6
    NOT               shift, and go to state 14
    NIL               shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    LOCAL             shift, and go to state 18
    MINUS             shift, and go to state 19
    PLUS_PLUS         shift, and go to state 20
    MINUS_MINUS       shift, and go to state 21
    LEFT_BRACKET      shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    NAMESPACE         shift, and go to state 26
    STRING            shift, and go to state 27

    $default  reduce using rule 58 (elist)

    expr        go to state 66
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    elist       go to state 107
    objectdef   go to state 36
    const       go to state 39


State 53

  100 returnstmt: RETURN SEMICOLON •

    $default  reduce using rule 100 (returnstmt)


State 54

   15 expr: expr • PLUS expr
   16     | expr • MINUS expr
   17     | expr • MULT expr
   18     | expr • DIV expr
   19     | expr • MOD expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUAL expr
   25     | expr • NOT_EQUALS expr
   26     | expr • AND M expr
   27     | expr • OR M expr
  101 returnstmt: RETURN expr • SEMICOLON

    AND            shift, and go to state 73
    OR             shift, and go to state 74
    PLUS           shift, and go to state 75
    MINUS          shift, and go to state 76
    MULT           shift, and go to state 77
    DIV            shift, and go to state 78
    MOD            shift, and go to state 79
    EQUAL          shift, and go to state 80
    NOT_EQUALS     shift, and go to state 81
    GREATER        shift, and go to state 82
    LESS           shift, and go to state 83
    GREATER_EQUAL  shift, and go to state 84
    LESS_EQUAL     shift, and go to state 85
    SEMICOLON      shift, and go to state 108


State 55

   98 Break: BREAK SEMICOLON •

    $default  reduce using rule 98 (Break)


State 56

   99 Continue: CONTINUE SEMICOLON •

    $default  reduce using rule 99 (Continue)


State 57

   15 expr: expr • PLUS expr
   16     | expr • MINUS expr
   17     | expr • MULT expr
   18     | expr • DIV expr
   19     | expr • MOD expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUAL expr
   25     | expr • NOT_EQUALS expr
   26     | expr • AND M expr
   27     | expr • OR M expr
   31 term: NOT expr •

    PLUS   shift, and go to state 75
    MINUS  shift, and go to state 76
    MULT   shift, and go to state 77
    DIV    shift, and go to state 78
    MOD    shift, and go to state 79

    $default  reduce using rule 31 (term)


State 58

   44 lvalue: LOCAL IDENT •

    $default  reduce using rule 44 (lvalue)


State 59

   15 expr: expr • PLUS expr
   16     | expr • MINUS expr
   17     | expr • MULT expr
   18     | expr • DIV expr
   19     | expr • MOD expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUAL expr
   25     | expr • NOT_EQUALS expr
   26     | expr • AND M expr
   27     | expr • OR M expr
   30 term: MINUS expr •

    $default  reduce using rule 30 (term)


State 60

   53 call: LEFT_PARENTHESIS • funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    FUNCTION  shift, and go to state 9

    funcdef  go to state 109


State 61

   32 term: PLUS_PLUS lvalue •
   47 member: lvalue • DOT IDENT
   48       | lvalue • LEFT_BRACKET expr RIGHT_BRACKET
   51 call: lvalue • callsuffix

    LEFT_BRACKET      shift, and go to state 90
    LEFT_PARENTHESIS  shift, and go to state 91
    DOUBLE_DOT        shift, and go to state 92
    DOT               shift, and go to state 93

    $default  reduce using rule 32 (term)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 62

   49 member: call • DOT IDENT
   50       | call • LEFT_BRACKET expr RIGHT_BRACKET
   52 call: call • LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_BRACKET      shift, and go to state 97
    LEFT_PARENTHESIS  shift, and go to state 98
    DOT               shift, and go to state 99


State 63

   34 term: MINUS_MINUS lvalue •
   47 member: lvalue • DOT IDENT
   48       | lvalue • LEFT_BRACKET expr RIGHT_BRACKET
   51 call: lvalue • callsuffix

    LEFT_BRACKET      shift, and go to state 90
    LEFT_PARENTHESIS  shift, and go to state 91
    DOUBLE_DOT        shift, and go to state 92
    DOT               shift, and go to state 93

    $default  reduce using rule 34 (term)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 64

   68 block: LEFT_BRACE $@1 • stmt_list RIGHT_BRACE

    $default  reduce using rule 3 (stmt_list)

    stmt_list  go to state 110


State 65

   66 indexedelem: LEFT_BRACE • expr COLON expr RIGHT_BRACE

    INTEGER           shift, and go to state 4
    REALCONST         shift, and go to state 5
    IDENT             shift, and go to state 6
    NOT               shift, and go to state 14
    NIL               shift, and go to state 15
    TRUE              shift, and go to state 16
    FALSE             shift, and go to state 17
    LOCAL             shift, and go to state 18
    MINUS             shift, and go to state 19
    PLUS_PLUS         shift, and go to state 20
    MINUS_MINUS       shift, and go to state 21
    LEFT_BRACKET      shift, and go to state 23
    LEFT_PARENTHESIS  shift, and go to state 24
    NAMESPACE         shift, and go to state 26
    STRING            shift, and go to state 27

    expr        go to state 111
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 39


State 66

   15 expr: expr • PLUS expr
   16     | expr • MINUS expr
   17     | expr • MULT expr
   18     | expr • DIV expr
   19     | expr • MOD expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUAL expr
   25     | expr • NOT_EQUALS expr
   26     | expr • AND M expr
   27     | expr • OR M expr
   59 elist: expr • elist_tail

    AND            shift, and go to state 73
    OR             shift, and go to state 74
    PLUS           shift, and go to state 75
    MINUS          shift, and go to state 76
    MULT           shift, and go to state 77
    DIV            shift, and go to state 78
    MOD            shift, and go to state 79
    EQUAL          shift, and go to state 80
    NOT_EQUALS     shift, and go to state 81
    GREATER        shift, and go to state 82
    LESS           shift, and go to state 83
    GREATER_EQUAL  shift, and go to state 84
    LESS_EQUAL     shift, and go to state 85
    COMMA          shift, and go to state 112

    $default  reduce using rule 61 (elist_tail)

    elist_tail  go to state 113


State 67

   62 objectdef: LEFT_BRACKET elist • RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 114


State 68

   63 objectdef: LEFT_BRACKET indexed • RIGHT_BRACKET
   65 indexed: indexed • COMMA indexedelem

    RIGHT_BRACKET  shift, and go to state 115
    COMMA          shift, and go to state 116


State 69

   64 indexed: indexedelem •

    $default  reduce using rule 64 (indexed)


State 70
